--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest ui"
   },
   "keywords": [],
   "author": "",
@@ -18,13 +19,14 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "22.10.5",
     "@vitest/coverage-v8": "3.0.1",
+    "@vitest/ui": "3.0.1",
     "eslint": "8.57.1",
     "prisma": "6.2.1",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.0.1"
+    "vitest": "3.0.2"
   },
   "dependencies": {
     "@prisma/client": "6.2.1",
