--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "api-03-solid",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
@@ -19,14 +20,14 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "22.10.5",
     "@vitest/coverage-v8": "3.0.1",
-    "@vitest/ui": "3.0.1",
     "eslint": "8.57.1",
     "prisma": "6.2.1",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.7.3",
+    "vite": "6.0.11",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.0.2"
+    "vitest": "3.0.1"
   },
   "dependencies": {
     "@prisma/client": "6.2.1",
