--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "22.10.5",
-    "@vitest/coverage-v8": "3.0.1",
+    "@vitest/coverage-v8": "3.0.7",
+    "@vitest/ui": "3.0.7",
     "eslint": "8.57.1",
     "prisma": "6.2.1",
     "tsup": "8.3.5",
@@ -27,7 +28,7 @@
     "typescript": "5.7.3",
     "vite": "6.0.11",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.0.1"
+    "vitest": "3.0.7"
   },
   "dependencies": {
     "@fastify/jwt": "9.0.4",
