--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest --run --project unit",
+    "test:watch": "vitest --project unit",
+    "pretest:2e2": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:2e2": "vitest --run --project e2e",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest ui"
   },
@@ -22,6 +26,7 @@
     "@vitest/coverage-v8": "3.0.7",
     "@vitest/ui": "3.0.7",
     "eslint": "8.57.1",
+    "npm-run-all": "4.1.5",
     "prisma": "6.2.1",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
