--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:watch": "vitest --project unit",
     "pretest:2e2": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:2e2": "vitest --run --project e2e",
+    "test:watch:2e2": "vitest --project e2e",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest ui"
   },
@@ -23,11 +24,13 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "22.10.5",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "3.0.7",
     "@vitest/ui": "3.0.7",
     "eslint": "8.57.1",
     "npm-run-all": "4.1.5",
     "prisma": "6.2.1",
+    "supertest": "7.0.0",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.7.3",
