--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vitest": "3.0.7"
   },
   "dependencies": {
+    "@fastify/cookie": "11.0.2",
     "@fastify/jwt": "9.0.4",
     "@prisma/client": "6.2.1",
     "@types/bcryptjs": "2.4.6",
